benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-safe014_power.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe014_power.opt.yml/safe014_power.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe014_power.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_im09ggta/tmp/tmpgyo3lrrj.c
Compilation started
/tmp/BenchExec_run_im09ggta/tmp/tmpgyo3lrrj.c: In function ‘P0’:
/tmp/BenchExec_run_im09ggta/tmp/tmpgyo3lrrj.c:581:19: error: ‘FALSE’ undeclared (first use in this function)
  581 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_im09ggta/tmp/tmpgyo3lrrj.c:581:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_im09ggta/tmp/tmpgyo3lrrj.c: In function ‘main’:
/tmp/BenchExec_run_im09ggta/tmp/tmpgyo3lrrj.c:704:19: error: ‘TRUE’ undeclared (first use in this function)
  704 |   weak$$choice1 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
